커스터마이징2 ing

--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/intro.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/intro.html
@@ -2,28 +2,30 @@
 <div id="intro-section" class="text-center">
     <div class="container">
         <div class="section-title wow fadeInDown">
-            <h2>Our <strong>Services</strong></h2>
+            <h2> <strong style="color:#ffffff">GDG SSU 란</strong></h2>
             <hr>
             <div class="clearfix"></div>
-            <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus. Eleifend pellentesque natoque faucibus magna ut etiam.</p>
+            <p style="color:#e9e9e9">알을 깨고 나오는 것. 세상을 향한 첫걸음입니다</p>
         </div>
         <div class="space"></div>
         <div class="row">
             <div class="col-md-3 col-sm-6 service wow fadeInUp" data-wow-delay="200ms"> <i class="fa fa-desktop"></i>
-                <h4><strong>Web design</strong></h4>
-                <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+                <h4><strong>웹 개발</strong></h4>
+{#                <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>#}
+                <p>아름다운 개발</p>
             </div>
             <div class="col-md-3 col-sm-6 service wow fadeInUp" data-wow-delay="400ms"> <i class="fa fa-gears"></i>
-                <h4><strong>App Development</strong></h4>
-                <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
+                <h4><strong>모바일 어플리케이션</strong></h4>
+                <p>아름다운 개발</p>
+{#                <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>#}
             </div>
             <div class="col-md-3 col-sm-6 service wow fadeInUp" data-wow-delay="600ms"> <i class="fa fa-bullhorn"></i>
-                <h4><strong>Marketing</strong></h4>
-                <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+                <h4><strong>게임 개발</strong></h4>
+                <p>다이나믹한 개발</p>
             </div>
             <div class="col-md-3 col-sm-6 service wow fadeInUp" data-wow-delay="800ms"> <i class="fa fa-rocket"></i>
-                <h4><strong>Branding</strong></h4>
-                <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
+                <h4><strong>디자인</strong></h4>
+                <p>아름다운 디자인</p>
             </div>
         </div>
     </div>
