--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/member.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/member.html
@@ -1,10 +1,10 @@
 <div id="member-section" class="text-center">
     <div class="container">
         <div class="section-title wow fadeInDown">
-            <h2>Meet the <strong>Team</strong></h2>
+            <h2>GDG SSU <strong>멤버</strong></h2>
             <hr>
             <div class="clearfix"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+            <p>우리는 GDG SSU입니다</p>
         </div>
         <div id="row">
             <div class="col-md-3 col-sm-6 team wow fadeInUp" data-wow-delay="200ms">
