--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/porfolio.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/porfolio.html
@@ -1,10 +1,10 @@
 <div id="portfolio-section" class="text-center">
     <div class="container"> <!-- Container -->
         <div class="section-title wow fadeInDown">
-            <h2>Our <strong>Portfolio</strong></h2>
+            <h2>GDG SSU <strong>서비스</strong></h2>
             <hr>
             <div class="clearfix"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+            <p>우리의 서비스</p>
         </div>
         <div class="categories">
             <ul class="cat">
