--- a/gdg_flask/blueprint/recruits/recruits_2016_01/static/css/style.css
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/static/css/style.css
@@ -116,6 +116,7 @@ hr {
 	color: #d9e0e2;
 	font-size: 12px;
 	letter-spacing: 1px;
+	font-weight:700;
 }
 #menu.navbar-default .navbar-nav > li > a:hover {
 	color: #f3ca27;
@@ -140,7 +141,7 @@ hr {
 }
 /* Home Style */
 header {
-	background: url(../img/header-bg.jpg) no-repeat bottom center;
+	background: url(../images/header-bg.jpg) no-repeat center;
 	background-size: cover;
 	color: #d9e0e2;
 	position: relative;
@@ -185,6 +186,7 @@ header p {
 #intro-section {
 	padding: 80px 0 100px 0;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#032731+0,032e3a+20,032e3a+100,032731+100 */
+	background: #537EC2;
 	background: rgb(3,39,49); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(3,39,49,1) 0%, rgba(3,46,58,1) 20%, rgba(3,46,58,1) 100%, rgba(3,39,49,1) 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top, rgba(3,39,49,1) 0%, rgba(3,46,58,1) 20%, rgba(3,46,58,1) 100%, rgba(3,39,49,1) 100%); /* Chrome10-25,Safari5.1-6 */
