--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/header.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/header.html
@@ -2,7 +2,7 @@
 <!-- Header -->
 <header class="text-center" name="home">
     <div class="intro-text">
-        <h1 class="wow fadeInDown">We are <strong><span class="color">Tempo</span></strong></h1>
-        <p class="wow fadeInDown">a creative digital agency from New York</p>
-        <a href="#works-section" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Our Portfolio</a> </div>
+        <h1 class="wow fadeInDown" style="color:#537EC2;">GDG <strong><span class="color" style="color:#D9412F;"> SSU</span></strong></h1>
+        <p class="wow fadeInDown" style="color:#00A054; font-weight:700;">함께 그리는 미래</p>
+        <a href="#works-section" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">지원하기</a> </div>
 </header>
