html head title 수정

--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/porfolio.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/porfolio.html
@@ -10,10 +10,10 @@
             <ul class="cat">
                 <li>
                     <ol class="type">
-                        <li><a href="#" data-filter="*" class="active">All</a></li>
-                        <li><a href="#" data-filter=".web">Web Design</a></li>
-                        <li><a href="#" data-filter=".app">App Development</a></li>
-                        <li><a href="#" data-filter=".branding">Branding</a></li>
+                        <li><a href="#" data-filter="*" class="active">전체</a></li>
+                        <li><a href="#" data-filter=".web">서비스</a></li>
+                        <li><a href="#" data-filter=".app">게임</a></li>
+                        <li><a href="#" data-filter=".branding">디자인</a></li>
                     </ol>
                 </li>
             </ul>
