--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/base/base.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/base/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tempo</title>
+    <title>GDG SSU 2016 Recruit | GDG SSU 리쿠르팅</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
