불필요한 부분 제거

--- a/gdg_flask/templates/gdg-article/about/intro.html
+++ b/gdg_flask/templates/gdg-article/about/intro.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="intro-invite-frame">
-                    <img src = "/static/images/intro-background.png" name="aaa">
+                    <img class="intro-image" src = "{{ url_for('static',filename="images/intro-background.png")}}" alt="" name="aaa">
                     <!--<div class="intro-image">
                         <p class="intro-contents-text">소개내용</p>
                     </div>-->
