--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/nav.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/nav.html
@@ -15,14 +15,14 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#home" class="page-scroll">Home</a></li>
-                <li><a href="#intro-section" class="page-scroll">동아리 소개</a></li>
+                <li><a href="#recruitment-section" class="page-scroll">모집 분야</a></li>
                 <li><a href="#portfolio-section" class="page-scroll">포트폴리오</a></li>
-                <li><a href="#about-section" class="page-scroll">About</a></li>
+                <li><a href="#about-section" class="page-scroll">동아리 소개</a></li>
 
                 <li><a href="#member-section" class="page-scroll">멤버</a></li>
+                <li><a href="#ourmemory-section" class="page-scroll">우리의 추억</a></li>
                 <li><a href="">지원하기</a></li>
-                <li><a href="#testimonials-section" class="page-scroll">Testimonials</a></li>
-                <li><a href="#contact-section" class="page-scroll">Contact</a></li>
+
             </ul>
         </div>
         <!-- /.navbar-collapse -->
