--- a/gdg_flask/blueprint/recruits/recruits_2016_01/static/css/gdg-ssu.css
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/static/css/gdg-ssu.css
@@ -18,3 +18,119 @@
 ul, ol{
     padding-left:0;
 }
+
+/* Apply Section */
+#apply-section {
+	padding: 80px 0 20px 0;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c1a618+0,f1c40f+25,f1c40f+75,c1a618+100 */
+	background: rgb(193,166,24); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(193,166,24,1) 0%, rgba(241,196,15,1) 25%, rgba(241,196,15,1) 75%, rgba(193,166,24,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, rgba(193,166,24,1) 0%, rgba(241,196,15,1) 25%, rgba(241,196,15,1) 75%, rgba(193,166,24,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, rgba(193,166,24,1) 0%, rgba(241,196,15,1) 25%, rgba(241,196,15,1) 75%, rgba(193,166,24,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c1a618', endColorstr='#c1a618', GradientType=0 ); /* IE6-9 */
+}
+#apply-section hr {
+	background: #a9971c;
+}
+#apply-section h3 {
+	font-size: 20px;
+	font-weight: 400;
+}
+#apply-section form {
+	padding: 30px 0;
+}
+#apply-section .fa {
+	color: #f8e287;
+	margin-bottom: 10px;
+}
+#apply-section .form-control {
+	display: block;
+	width: 100%;
+	padding: 6px 12px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #555;
+	background-color: #fff;
+	background-image: none;
+	border: 1px solid #ccc;
+	border-radius: 2px;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	-webkit-transition: none;
+	-o-transition: none;
+	transition: none;
+}
+#apply-section .form-control:focus {
+	border-color: inherit;
+	outline: 0;
+	-webkit-box-shadow: transparent;
+	box-shadow: transparent;
+}
+#apply-section .social {
+	margin-top: 60px;
+}
+#apply-section .social ul li {
+	display: inline-block;
+	margin: 0 20px;
+}
+#apply-section .social i.fa {
+	font-size: 26px;
+	padding: 4px 5px;
+	color: #f8e287;
+	transition: all 0.5s;
+}
+#apply-section .social i.fa:hover {
+	color: #032731;
+}
+#apply-section .btn {
+	background: transparent;
+	border: 2px solid #fef9e7;
+	border-radius: 4px;
+	padding: 6px 14px;
+	margin-top: 20px;
+	color: #fef9e7;
+	font-size: 16px;
+	transition: all 0.5s;
+}
+#apply-section .btn:hover, #apply-section .btn:focus {
+	background: #fef9e7;
+	border: 2px solid #fef9e7;
+	color: #5b777f;
+}
+#apply-section .text-danger {
+	color: #cc3300;
+	text-align: left;
+}
+.apply-bottom{
+	margin-top:50px;
+}
+.apply-tab{
+	border: 1px solid #e9e9e9;
+}
+.apply-tab-title{
+	padding: 6px;
+	vertical-align: middle;
+		border-bottom:1px solid #e9e9e9;
+
+}
+.apply-tab-title h2{
+	margin:5px;
+}
+.apply-tab-content{
+	text-align:left;
+	padding: 40px;
+}
+.apply-tab-content li:last-child{
+	border-bottom:none;
+}
+.apply-tab-content li{
+	padding: 15px 0;
+	font-size: 1.2em;
+	border-bottom: 1px solid #ec971f;
+
+}
+.gdg-apply-btn{
+
+}
+.apply-tab-title
+.designer
