--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/about.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/about.html
@@ -1,40 +1,44 @@
-    <div id="about-section">
-        <div class="container">
-            <div class="section-title text-center wow fadeInDown">
-                <h2><strong>About</strong> us</h2>
-                <hr>
-                <div class="clearfix"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
-            </div>
-            <div class="row">
-                <div class="col-md-6 wow fadeInLeft"> <img src="img/about.png" class="img-responsive"> </div>
-                <div class="col-md-6 wow fadeInRight">
-                    <h4>Who We Are</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh ante facilisis bibendum.</p>
-                    <div class="space"></div>
-                    <h4>What We Do</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at.</p>
-                    <div class="space"></div><div class="list-style">
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-xs-12">
-                            <ul>
-                                <li>Lorem ipsum dolor</li>
-                                <li>Consectetur adipiscing</li>
-                                <li>Duis sed dapibus leo</li>
-                                <li>Sed commodo nibh ante</li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-xs-12">
-                            <ul>
-                                <li>Lorem ipsum dolor</li>
-                                <li>Consectetur adipiscing</li>
-                                <li>Duis sed dapibus leo</li>
-                                <li>Sed commodo nibh ante</li>
-                            </ul>
-                        </div>
+<div id="about-section">
+    <div class="container">
+        <div class="section-title text-center wow fadeInDown">
+            <h2> <strong style="color:#ffffff">GDG SSU 란</strong></h2>
+
+            <hr>
+            <div class="clearfix"></div>
+            <p>GDG SSU는 숭실대학교를 시작으로 세상을 변화시킬 것입니다 </p>
+        </div>
+        <div class="row">
+            <div class="col-md-6 wow fadeInLeft"> <img src="{{ url_for('recruits_201601.static', filename="images/gdg_201601_recruit_about.png") }}" class="img-responsive"> </div>
+            <div class="col-md-6 wow fadeInRight">
+                <h4 style="color:#ffffff;">Who We Are</h4>
+                <p>
+                    그냥 학생이라고 하기엔 뭔가 독특합니다. SW 분야를 전공하는 학생으로 자신만의 꿈과 목표가 명확하며 그저 배우는 것 뿐만이 아닌, 자신만의 주력분야를 가지고 실질적인 SW 개발/디자인을 진행합니다. 우리는 우리 스스로를 평범한 학생이 아닌 학생 개발자/디자이너라고 칭합니다.
+                    GDG SSU는 이름에서도 느껴지다시피 Google의 지원을 받으며 개발자로서 유익하고 의미있는 활동을 지속해왔습니다. GDG SSU의 일원이 되면 최고의 개발자라 일컫어지는 Googler를 만나서 인연을 맺고 도움을 받는 기회 또한 얻게됩니다.
+                </p>
+                <div class="space"></div>
+                <h4 style="color:#ffffff;">What We Do</h4>
+                <p>GDG SSU는 이미 숭실대학교 최고의 개발자가 다수 활동하는 그룹입니다. 또 개발자들과 함께 협업을 진행하는 디자이너 역시 좋은 활동을 이어나가고 있습니다. 하지만 여기에서 만족하지 않고 GDG SSU는 자신만의 분야를 가지고 열정있는 개발을 진행하는 개발자와, 자신의 색깔을 나타낼 줄 아는 디자이너를 이곳에 모두 모으고자 합니다. 또 그러한 사람들이 갖는 고민이나 문제를 함께 해결하며 성장하는 대학교 시절동안의 가장 특별한 멤버쉽을 만들고자 합니다.</p>
+                <div class="space"></div><div class="list-style">
+                <div class="row">
+                    <div class="col-lg-6 col-sm-6 col-xs-12">
+                        <ul>
+                            <li>최고의 학생개발자와 디자이너를 모으기</li>
+                            <li>Google의 기술과 디자인을 다루고 전파하기</li>
+                            <li>동료와 함께 배우기, 그리고 그 기회를 널리 퍼뜨리기</li>
+                            <li>무엇보다 중요한 것은 학창시절 20대의 추억</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6 col-sm-6 col-xs-12">
+                        <ul>
+                            <li>학생개발자들의 발전을 위하여 유익한 개발자 행사를 수 차례 주최</li>
+                            <li>가치있는 이벤트</li>
+                            <li>학생 개발자/디자이너</li>
+                            <li>그리고 당신</li>
+                        </ul>
                     </div>
                 </div>
-                </div>
+            </div>
             </div>
         </div>
     </div>
+</div>
