--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/recruits_contents.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/recruits_contents.html
@@ -1,7 +1,7 @@
 {% extends 'base/layout.html' %}
 {% block contents %}
     <!--Intro Section-->
-    {% include "included/section/intro.html" %}
+    {% include "included/section/recruits_section.html" %}
     <!-- Portfolio Section -->
     {% include "included/section/porfolio.html" %}
 
@@ -12,93 +12,19 @@
     {% include "included/section/member.html" %}
 
 
-    <!-- Testimonials Section -->
-    <div id="testimonials-section" class="text-center">
-        <div class="container">
-            <div class="section-title wow fadeInDown">
-                <h2>What our <strong>Clients</strong> say</h2>
-                <hr>
-            </div>
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <div id="testimonial" class="owl-carousel owl-theme wow fadeInUp" data-wow-delay="200ms">
-                        <div class="item">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
-                            <p><strong>John DOE</strong>, CEO, Company.</p>
-                        </div>
-                        <div class="item">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
-                            <p><strong>Jenny DOE</strong>, CEO, Company.</p>
-                        </div>
-                        <div class="item">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
-                            <p><strong>John DOEn</strong>, CEO, Company.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Memory Section -->
+    {% include "included/section/memory_section.html" %}
 
-    <!-- Contact Section -->
-    <div id="contact-section" class="text-center">
-        <div class="container">
-            <div class="section-title wow fadeInDown">
-                <h2><strong>Contact</strong> us</h2>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
-            </div>
-            <div class="col-md-8 col-md-offset-2 wow fadeInUp" data-wow-delay="200ms">
-                <div class="col-md-4"> <i class="fa fa-map-marker fa-2x"></i>
-                    <p>321 Awesome Street<br>
-                        New York, NY 17022</p>
-                </div>
-                <div class="col-md-4"> <i class="fa fa-envelope-o fa-2x"></i>
-                    <p>info@companyname.com</p>
-                </div>
-                <div class="col-md-4"> <i class="fa fa-phone fa-2x"></i>
-                    <p> +1 800 123 1234</p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-            <div class="col-md-8 col-md-offset-2 wow fadeInUp" data-wow-delay="400ms">
-                <h3>Leave us a message</h3>
-                <form name="sentMessage" id="contactForm" novalidate>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="text" id="name" class="form-control" placeholder="Name" required="required">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-                        <p class="help-block text-danger"></p>
-                    </div>
-                    <div id="success"></div>
-                    <button type="submit" class="btn btn-default">Send Message</button>
-                </form>
-                <div class="social">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li><a href="#"><i class="fa fa-github"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Apply Section -->
+    {% include "included/section/apply.html" %}
 
+
+
+{#    <!-- Contact Section -->#}
+{#    {% include "included/section/contact.html" %}#}
+
+
+    <!--portfolio Modal-->
     {% include "included/portfolio_modals.html" %}
 
 {% endblock %}
