--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/apply.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/apply.html
@@ -4,7 +4,7 @@
             <h2><strong>지원하기</strong></h2>
             <hr>
             <div class="col-md-6 col-sm-6 animated fadeInLeft visible">
-                <div class="apply-tab developer">
+                <div class="apply-tab developer ">
                     <div class="apply-tab-title">
                         <h2>
                             Developer
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-sm-6 animated fadeInLeft visible">
+            <div class="col-md-6 col-sm-6 animated fadeInRight visible">
                 <div class="apply-tab designer">
                     <div class="apply-tab-title">
                         <h2>
