gdg - recruits  detail 수정 2

--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/nav.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/nav.html
@@ -5,7 +5,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <a class="navbar-brand" href="{{ url_for('recruits_201601.recruit_index') }}">
+            <a class="navbar-brand gdg-recruit-navbar-brand" href="{{ url_for('recruits_201601.recruit_index') }}">
                 {#                <i class="fa fa-flag-checkered fa-flip-horizontal"></i> Tempo<strong></strong>#}
                 <div class="logo logo-light"></div>
             </a>
