--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/member.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/member.html
@@ -8,13 +8,13 @@
         </div>
         <div id="row">
             <div class="col-md-3 col-sm-6 team wow fadeInUp" data-wow-delay="200ms">
-                <div class="thumbnail"> <img src="img/team/01.jpg" alt="..." class="img-circle team-img">
+                <div class="thumbnail"> <img src="{{ url_for('recruits_201601.static', filename='images/member/ys_image.png') }}" alt="..." class="img-circle team-img">
                     <div class="caption">
-                        <h3>Jessica Wally</h3>
-                        <p>CEO / Founder</p>
+                        <h3>신윤수</h3>
+                        <p>GDG SSU 2015</p>
                         <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.facebook.com/younsoo.shin.18"><i class="fa fa-facebook"></i></a></li>
+{#                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul>
                     </div>
