--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/memory_section.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/memory_section.html
@@ -8,7 +8,7 @@
             <div class="col-md-8 col-md-offset-2">
                 <div id="testimonial" class="owl-carousel owl-theme wow fadeInUp" data-wow-delay="200ms">
                     <div class="item">
-                        <p>사진이 한장씩 넘어갑니다.(1)</p>
+                        <p><img class="img-responsive" src="{{ url_for('recruits_201601.static', filename='images/good_mt_all.jpg') }}" alt=""></p>
                         <p><strong>사진 제목</strong>날짜 (행사이름)</p>
                     </div>
                     <div class="item">
