--- a/gdg_flask/blueprint/recruits/recruits_2016_01/static/css/gdg-ssu.css
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/static/css/gdg-ssu.css
@@ -106,6 +106,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c1a618', end
 }
 .apply-tab{
 	border: 1px solid #e9e9e9;
+	margin-top:20px;
 }
 .apply-tab-title{
 	padding: 6px;
@@ -129,8 +130,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c1a618', end
 	border-bottom: 1px solid #ec971f;
 
 }
-.gdg-apply-btn{
-
+.gdg-recruit-navbar-brand{
+	padding:15px 0;
 }
-.apply-tab-title
-.designer
