--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/portfolio_modals.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/portfolio_modals.html
@@ -14,13 +14,13 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <!-- Project Details Go Here -->
-                        <h2>Project Title</h2>
-                        <p class="item-intro">Lorem ipsum dolor sit amet consectetur.</p>
-                        <img class="img-responsive img-centered" src="img/portfolio/01-preview.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet, sea essent iisque iudicabit te, pro no justo delicata inimicus, et oblique docendi laboramus eum. Ei minim fabulas pertinacia pro, graeco urbanitas reformidans quo id. Error congue tacimates ei vis, facer facete ius cu, audiam prodesset pri ut. Id semper fuisset vel, has dolorum menandri eu.</p>
+                        <h2>뮤직쿨</h2>
+                        <p class="item-intro">누구나 쉽게 음악을 제작하고 저장할 수 있습니다.</p>
+                        <img class="img-responsive img-centered" src="{{ url_for('recruits_201601.static', filename='images/portfolio/musicool_img.png') }}" alt="">
+                        <p>누구나 쉽게 음악을 제작하고 저장 할 수 있습니다. 자신만의 음악을 제작하고 자신만의 음악을 보관하세요</p>
                         <ul class="list-inline">
-                            <li><strong>Client</strong>: John Doe</li>
-                            <li><strong>Category</strong>: Web Design</li>
+                            <li><strong>제작자</strong>: 신윤수, 이준수</li>
+                            <li><strong>카테고리</strong>: 웹서비스</li>
                         </ul>
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                     </div>
