--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/porfolio.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/porfolio.html
@@ -25,11 +25,11 @@
                     <div class="portfolio-item wow fadeInUp" data-wow-delay="200ms">
                         <div class="hover-bg"> <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                             <div class="hover-text">
-                                <h4>Project Title</h4>
-                                Web Design
+                                <h4>뮤직쿨</h4>
+                                웹 서비스
                                 <div class="clearfix"></div>
                                 <i class="fa fa-plus"></i> </div>
-                            <img src="img/portfolio/01.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                            <img src="{{ url_for('recruits_201601.static', filename='images/portfolio/musicool_img.png') }}" class="img-responsive" alt="Project Title"> </a> </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3 col-lg-3 app">
@@ -113,3 +113,6 @@
         </div>
     </div>
 </div>
+
+    <!--portfolio Modal-->
+    {% include "included/portfolio_modals.html" %}
