--- a/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/member.html
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/templates/included/section/member.html
@@ -11,10 +11,10 @@
                 <div class="thumbnail"> <img src="{{ url_for('recruits_201601.static', filename='images/member/ys_image.png') }}" alt="..." class="img-circle team-img">
                     <div class="caption">
                         <h3>신윤수</h3>
-                        <p>GDG SSU 2015</p>
+                        <p>GDG SSU 2015 Developer</p>
                         <ul class="list-inline">
                             <li><a href="https://www.facebook.com/younsoo.shin.18"><i class="fa fa-facebook"></i></a></li>
-{#                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
+                            {#                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul>
                     </div>
@@ -23,8 +23,8 @@
             <div class="col-md-3 col-sm-6 team wow fadeInUp" data-wow-delay="400ms">
                 <div class="thumbnail"> <img src="img/team/02.jpg" alt="..." class="img-circle team-img">
                     <div class="caption">
-                        <h3>Mike Sloan</h3>
-                        <p>Web Designer</p>
+                        <h3>이가은</h3>
+                        <p>GDG SSU 2016 Orgarnizer</p>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -36,8 +36,8 @@
             <div class="col-md-3 col-sm-6 team wow fadeInUp" data-wow-delay="600ms">
                 <div class="thumbnail"> <img src="img/team/03.jpg" alt="..." class="img-circle team-img">
                     <div class="caption">
-                        <h3>Michele Doe</h3>
-                        <p>Web Designer</p>
+                        <h3>강경완</h3>
+                        <p>GDG SSU 2016 Orgarnizer</p>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -49,8 +49,8 @@
             <div class="col-md-3 col-sm-6 team wow fadeInUp" data-wow-delay="800ms">
                 <div class="thumbnail"> <img src="img/team/04.jpg" alt="..." class="img-circle team-img">
                     <div class="caption">
-                        <h3>Larry Evans</h3>
-                        <p>Project Manager</p>
+                        <h3>김나연</h3>
+                        <p>GDG SSU 2015 Orgarnizer</p>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -58,6 +58,11 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div>
+            <div>
+                <a href="" ><p style="font-size:1.2em;">더보기</p></a>
             </div>
         </div>
     </div>
