--- a/gdg_flask/blueprint/recruits/recruits_2016_01/static/css/style.css
+++ b/gdg_flask/blueprint/recruits/recruits_2016_01/static/css/style.css
@@ -141,7 +141,7 @@ hr {
 }
 /* Home Style */
 header {
-	background: url(../images/header-bg.jpg) no-repeat center;
+	background: linear-gradient(rgba(46,60,73,0.6),rgba(46,60,73,0.7),url(../images/header-bg.jpg) no-repeat center;
 	background-size: cover;
 	color: #d9e0e2;
 	position: relative;
