1.gdg-article : 이미지크기 최대로 나오도록 수정 2.소개로 사용될 이미지들 추가 3.버튼 위치, 이름 수정

--- a/gdg_flask/static/css/gdg-article.css
+++ b/gdg_flask/static/css/gdg-article.css
@@ -75,7 +75,7 @@ div.divider{
 }
 .intro-image {
     width: 100%;
-    height: 300px;
+    height: 100%;
 }
 .intro-contents-text{
     padding: 100px 0 0 50px;
