--- a/gdg_flask/templates/gdg-article/about/intro.html
+++ b/gdg_flask/templates/gdg-article/about/intro.html
@@ -15,12 +15,12 @@
                 </div>
             </div>
             <div class="col-lg-4" style="margin:auto">
-                <div class="intro-buttons-frame" >
+                <div class="intro-buttons-frame" style="visibility: visible; animation-name: fadeInDown;">
                     <button type="button" class="btn btn-success btn-lg intro-button" onmouseover="aaa.src='/static/images/intro-background.png'">GDG SSU?</button>
-                    <button type="button" class="btn btn-success btn-lg intro-button" onmouseover="aaa.src='/static/images/GDG-SSU-black.png'">history</button>
-                    <button type="button" class="btn btn-success btn-lg intro-button">news</button>
-                    <button type="button" class="btn btn-success btn-lg intro-button">etc1</button>
-                    <button type="button" class="btn btn-success btn-lg intro-button">etc2</button>
+                    <button type="button" class="btn btn-success btn-lg intro-button" onmouseover="aaa.src='/static/images/mission_img.png'">Mission</button>
+                    <button type="button" class="btn btn-success btn-lg intro-button" onmouseover="aaa.src='/static/images/howmany_img.png'">How many?</button>
+                    <button type="button" class="btn btn-success btn-lg intro-button" onmouseover="aaa.src='/static/images/withwho_img.png'">With who?</button>
+                    <button type="button" class="btn btn-success btn-lg intro-button" onmouseover="aaa.src='/static/images/contact_img.png'">Contact</button>
                 </div>
             </div>
         </div>
